src/rgw/rgw_bucket.cc
@@ -184,7 +184,6 @@ int rgw_link_bucket(RGWRados* const store,
                     const rgw_user& user_id,
                     rgw_bucket& bucket,
                     ceph::real_time creation_time,
-                    std::string placement_rule,
                     bool update_entrypoint)
 {
   int ret;
@@ -192,7 +191,6 @@ int rgw_link_bucket(RGWRados* const store,
   string& bucket_name = bucket.name;
 
   cls_user_bucket_entry new_bucket;
-  new_bucket.placement_rule = placement_rule;
 
   RGWBucketEntryPoint ep;
   RGWObjVersionTracker ot;
@@ -485,8 +483,7 @@ void check_bad_user_bucket_mapping(RGWRados *store, const rgw_user& user_id,
         if (fix) {
           cout << "fixing" << std::endl;
           r = rgw_link_bucket(store, user_id, actual_bucket,
-                              bucket_info.creation_time,
-                              bucket_info.placement_rule);
+                              bucket_info.creation_time);
           if (r < 0) {
             cerr << "failed to fix bucket: " << cpp_strerror(-r) << std::endl;
           }
@@ -904,7 +901,7 @@ int RGWBucket::link(RGWBucketAdminOpState& op_state, std::string *err_msg)
     }
 
     r = rgw_link_bucket(store, user_info.user_id, bucket_info.bucket,
-                        ceph::real_time(), bucket_info.placement_rule);
+                        ceph::real_time());
     if (r < 0) {
       return r;
     }
@@ -2127,15 +2124,7 @@ public:
 
     /* link bucket */
     if (be.linked) {
-      RGWObjectCtx ctx(store);
-      RGWBucketInfo bucket_info;
-      ret = store->get_bucket_info(ctx, tenant_name, bucket_name,
-                                   bucket_info, nullptr, nullptr);
-      if (ret < 0) {
-        return ret;
-      }
-      ret = rgw_link_bucket(store, be.owner, be.bucket, be.creation_time,
-                            bucket_info.placement_rule, false);
+      ret = rgw_link_bucket(store, be.owner, be.bucket, be.creation_time, false);
     } else {
       ret = rgw_unlink_bucket(store, be.owner, be.bucket.tenant,
                               be.bucket.name, false);
